--- a/Apps.LanguageWeaver/Apps.LanguageWeaver.csproj
+++ b/Apps.LanguageWeaver/Apps.LanguageWeaver.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.1.0" />
-    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.11" />
   </ItemGroup>
 
 </Project>
