--- a/Apps.LanguageWeaver/Apps.LanguageWeaver.csproj
+++ b/Apps.LanguageWeaver/Apps.LanguageWeaver.csproj
@@ -11,6 +11,10 @@
   <ItemGroup>
     <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.2.0-alpha3" />
     <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.11" />
+    <PackageReference Include="MimeTypes" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
