--- a/Apps.LanguageWeaver/Apps.LanguageWeaver.csproj
+++ b/Apps.LanguageWeaver/Apps.LanguageWeaver.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.3.3" />
     <PackageReference Include="Blackbird.Applications.SDK.Extensions.FileManagement" Version="1.0.1" />
-    <PackageReference Include="Blackbird.Applications.Sdk.Glossaries.Utils" Version="1.0.0" />
+    <PackageReference Include="Blackbird.Applications.Sdk.Glossaries.Utils" Version="1.0.0-alpha13" />
     <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.24" />
     <PackageReference Include="MimeTypes" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
